manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: channel-service
  namespace: default
  labels:
    app: channel-service
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: channel-service
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
